H1 pill调成上方下圆

--- a/docs/latex_theme/components_safety.tex
+++ b/docs/latex_theme/components_safety.tex
@@ -141,6 +141,8 @@
     colback=BrandDark,
     colframe=BrandDark,
     arc=\csname HBcomp_h1_pill_arc\endcsname,
+    rounded corners=south,
+    sharp corners=north,
     boxrule=0pt,
     left=\csname HBcomp_h1_pill_pad_lr\endcsname,
     right=\csname HBcomp_h1_pill_pad_lr\endcsname,
